# nsqip-tools

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  main.py  pyproject.toml  pytest.ini  test_real_data.py
.claude/: settings.json
.claude/rules/: nsqip-conventions.md
examples/: basic_usage.py
notebooks/: adult_clean.ipynb  peds_clean.ipynb  test_adult.ipynb  testing.ipynb
scripts/: build_full_dataset.py  build_test_dataset.py  generate_data_dictionary.py  quick_active_fix.py  quick_csv_regen.py  test_incremental.py  validate_adult_nsqip.py
src/: cleaning_utils.py
src/nsqip_tools/: __init__.py  analysis.py  analysis_utils.py  builder.py  cleaning_utils.py  config.py  constants.py  data_dictionary.py  query.py
src/nsqip_tools/_internal/: __init__.py  ingest.py  inspect.py  memory_utils.py  transform.py
src/nsqip_tools/data_ingest/: create_db.py
src/nsqip_tools/utils/: logging_utils.py
tests/: conftest.py  test_analysis.py  test_builder.py  test_data_dictionary.py  test_datasets.py  test_error_handling.py  test_memory_utils.py  test_query.py  test_transform.py
tests/inspect/: test_data_inspector.py
