[project]
name = "nsqip-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.2",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "numpy>=2.2.5",
    "pip>=25.1.1",
    "polars>=1.27.1",
    "pyarrow>=19.0.1",
    "pytest>=8.3.5",
]
